[gd_scene format=3 uid="uid://ocbi5a4rgeyw"]

[ext_resource type="Script" uid="uid://b0wsq6ow31160" path="res://Scripts/MSConstructPanel.gd" id="1_8il4y"]
[ext_resource type="Theme" uid="uid://cp2u1kgj60ic" path="res://Resources/default_theme.tres" id="2_se21b"]
[ext_resource type="Texture2D" uid="uid://blgh1lvsfpiu8" path="res://Graphics/GUI/Border.png" id="3_8il4y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_seglp"]

[sub_resource type="Animation" id="Animation_tg7hu"]
resource_name = "Fade"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlackRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.192157)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-60, -0.25, 0, 0.1, 53.3855, -2, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_h6jf6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlackRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bp5hg"]
_data = {
&"Fade": SubResource("Animation_tg7hu"),
&"RESET": SubResource("Animation_h6jf6")
}

[node name="Control" type="Control" unique_id=1303888948]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
script = ExtResource("1_8il4y")

[node name="BlackRect" type="ColorRect" parent="." unique_id=1566176716]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="Panel" type="NinePatchRect" parent="." unique_id=1432699089]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
offset_top = 120.0
offset_right = 178.0
offset_bottom = 600.0
mouse_filter = 1
theme = ExtResource("2_se21b")
texture = ExtResource("3_8il4y")
patch_margin_left = 15
patch_margin_top = 11
patch_margin_right = 15
patch_margin_bottom = 11

[node name="Panel" type="Panel" parent="Panel" unique_id=246773202]
show_behind_parent = true
layout_mode = 0
offset_left = 174.0
offset_right = 418.0
offset_bottom = 48.0

[node name="BuildAll" type="CheckBox" parent="Panel" unique_id=98859864]
layout_mode = 0
offset_left = 190.0
offset_top = 8.0
offset_right = 402.0
offset_bottom = 39.0
text = "BUILD_ALL_AT_ONCE"
text_overrun_behavior = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel" unique_id=819932456]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_seglp")
horizontal_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer" unique_id=447995841]
texture_filter = 4
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel" unique_id=1875130531]
layout_mode = 0
offset_top = -28.0
offset_right = 178.0
offset_bottom = -3.0
text = "CONSTRUCT"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1185369289]
libraries/ = SubResource("AnimationLibrary_bp5hg")

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="toggled" from="Panel/BuildAll" to="." method="_on_build_all_toggled"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_construct_panel_animation_animation_finished"]
